tackc_lib/src/snapshots/tackc_lib__parser__run_prog_parser_test@basic.tck.snap
---
source: tackc_lib/src/parser.rs
input_file: tackc_lib/src/parser/tests/basic.tck
---
(AstModule(
  file: File(
    src: "mod tests;\n\nfunc main() {\n    println(\"Hello, world!\");\n}\n",
    path: "testing.tck",
    line_starts: [
      0,
      11,
      12,
      26,
      56,
      58,
    ],
    id: 2083824584,
  ),
  mod_stmt: Some(ModStatement(
    exported: false,
    path: Some(AstPath(
      components: [
        Some(Interned(1358731090239635984, PhantomData)),
      ],
      id: NodeId(
        id: 1,
        file: 2083824584,
      ),
    )),
    id: NodeId(
      id: 2,
      file: 2083824584,
    ),
  )),
  items: [
    Some(Item(
      kind: FuncItem(FuncItem(
        exported: false,
        ident: Some(Interned(9365442088046645862, PhantomData)),
        params: [],
        ret_type: None,
        block: Some(Block(
          stmts: [
            Some(Statement(
              kind: ExpressionStatement(ExpressionStatement(
                expr: Expression(
                  kind: Call(Expression(
                    kind: Ident(Interned(9582129718345307716, PhantomData)),
                    id: NodeId(
                      id: 3,
                      file: 2083824584,
                    ),
                  ), [
                    Some(Expression(
                      kind: StringLit(Interned(8470909341547293647, PhantomData)),
                      id: NodeId(
                        id: 4,
                        file: 2083824584,
                      ),
                    )),
                  ]),
                  id: NodeId(
                    id: 5,
                    file: 2083824584,
                  ),
                ),
                semi: Some(Some(Token(
                  span: Span(
                    start: 54,
                    end: 55,
                  ),
                  kind: Semicolon,
                  lexeme: Interned(3447890864966814147, PhantomData),
                ))),
              )),
              id: NodeId(
                id: 6,
                file: 2083824584,
              ),
            )),
          ],
          expr: None,
          id: NodeId(
            id: 7,
            file: 2083824584,
          ),
        )),
      )),
      id: NodeId(
        id: 8,
        file: 2083824584,
      ),
    )),
  ],
  spans: {
    NodeId(
      id: 1,
      file: 2083824584,
    ): Span(
      start: 4,
      end: 9,
    ),
    NodeId(
      id: 2,
      file: 2083824584,
    ): Span(
      start: 0,
      end: 10,
    ),
    NodeId(
      id: 3,
      file: 2083824584,
    ): Span(
      start: 30,
      end: 37,
    ),
    NodeId(
      id: 4,
      file: 2083824584,
    ): Span(
      start: 38,
      end: 53,
    ),
    NodeId(
      id: 5,
      file: 2083824584,
    ): Span(
      start: 30,
      end: 54,
    ),
    NodeId(
      id: 6,
      file: 2083824584,
    ): Span(
      start: 30,
      end: 55,
    ),
    NodeId(
      id: 7,
      file: 2083824584,
    ): Span(
      start: 24,
      end: 57,
    ),
    NodeId(
      id: 8,
      file: 2083824584,
    ): Span(
      start: 12,
      end: 57,
    ),
  },
), [])
